do some change in final result

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -102,7 +102,7 @@
             }
             if(check(0,1,2) == str || check(3,4,5) == str || check(6,7,8) == str || check(0,3,6) == str ||
             check(1,4,7) == str || check(2,5,8) == str || check(0,4,8) == str || check(2,4,6) == str){
-                document.getElementById('result').innerHTML = name+" wins";
+                document.getElementById('result').innerHTML = name+" wins!";
                 disable();
 
             }
