--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
     <style>
         body{
-            align-items:center;
+            text-align:center;
         }
     </style>
 </head>
 <body>
+    <h1>This Page contain all the link of my projects that i have done in my training</h1>
     <h1><a href="pages/tic-tac-toe.html">tic tac toe</a></h1>
 
     
