make some changes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <style>
         body{
             text-align:center;
+            background-image: linear-gradient(to right,gray,white);
+        }
+        .heading{
+            
         }
     </style>
+
 </head>
 <body>
-    <h1>This Page contain all the link of my projects that i have done in my training</h1>
+    <h1 class="heading">This Page Contains All The Link Of My Projects That I Have Done In My Training.</h1>
+    <hr>
     <h1><a href="pages/tic-tac-toe.html">tic tac toe</a></h1>
 
     
