add link of other pages

--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -97,7 +97,7 @@
             
             <button class="calculator-operation-button" onclick="stringBuilder('+')">+</button>
             <button class="calculator-operation-button" onclick="stringBuilder('-')">-</button>
-            <button class="calculator-operation-button" onclick="stringBuilder('')"></button>
+            <button class="calculator-operation-button" onclick="stringBuilder('*')">*</button>
             <button class="calculator-operation-button" onclick="stringBuilder('/')">/</button>
             
         </div>
