--- a/pages/counter.html
+++ b/pages/counter.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practical-15</title>
+    <title>Counter</title>
     <style>
         * {
             padding: 0;
