remove class from heading

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-    <h1 class="heading">This Page Contains All The Link Of My Projects That I Have Done In My Training.</h1>
+    <h1>This Page Contains All The Link Of My Projects That I Have Done In My Training.</h1>
     <hr>
 
     <h1><a href="pages/colorflipper.html">Color Flipper</a></h1>
